[배정규] Refator: 코드 리뷰 반영 완료

--- a/src/Common.scss
+++ b/src/Common.scss
@@ -18,6 +18,11 @@
   word-break: keep-all;
 }
 
-body {
-  font-family: "Suisse Regular";
-}
+//font
+$darkColor: #333;
+//background
+$lightColor: #fffef2;
+$grayColor: #ebeade;
+// hover
+$lightGray: #f0efe1;
+$darkGray: #e5e4d8;
