Modify: 리뷰 반영 완료 Add: 상품 상세 페이지 레이아웃 작업 중

--- a/src/Pages/ProductList/Components/Product.scss
+++ b/src/Pages/ProductList/Components/Product.scss
@@ -11,9 +11,15 @@
     background-color: $lightGray;
   }
 
-  img {
-    max-width: 300px;
-    height: 300px;
+  .imgContainer {
+    display: flex;
+    align-items: flex-end;
+    width: 300px;
+    height: 430px;
+
+    img {
+      width: 100%;
+    }
   }
 
   .productInfo {
