--- a/src/Common.scss
+++ b/src/Common.scss
@@ -16,10 +16,14 @@
 * {
   box-sizing: border-box;
   word-break: keep-all;
-  list-style-type: none;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-}
+//font
+$fontDark: #333;
+$fontLight: #666666;
+//background
+$lightColor: #fffef2;
+$grayColor: #ebeade;
+// hover
+$lightGray: #f0efe1;
+$darkGray: #e5e4d8;
