--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,15 +1,15 @@
+@import "../../Common.scss";
 $font-size: 14px;
 $font-weight: 100;
-$color: #333;
 
 .Footer {
   width: 100%;
-  height: 500px;
+  height: 430px;
   padding-left: 50px;
   font-family: "Suisse Regualr", sans-serif;
   font-size: $font-size;
   font-weight: $font-weight;
-  color: $color;
+  color: $fontDark;
 
   .footerContent {
     display: flex;
@@ -35,12 +35,12 @@ $color: #333;
             background-color: transparent;
             border: 1px solid #dad9d0;
             border-width: 0 0 1px 0;
-            line-height: 1;
+            font-size: 16px;
+            line-height: 2;
             text-overflow: ellipsis;
-            transition: all 200ms cubic-bezier(0.215, 0.61, 0.355, 1);
 
             &:focus {
-              border-color: #333;
+              border-color: $fontDark;
               outline: none;
               transition: border 500ms ease;
             }
@@ -50,7 +50,7 @@ $color: #333;
           top: 5px;
           position: absolute;
           font-size: 25px;
-          transition: all 200ms cubic-bezier(0.215, 0.61, 0.355, 1);
+          transition: all 300ms cubic-bezier(0.215, 0.61, 0.355, 1);
 
           &:focus {
             font-size: 16px;
@@ -93,11 +93,11 @@ $color: #333;
   width: 100%;
   height: 78px;
   padding: 20px 40px;
-  background-color: $color;
+  background-color: $fontDark;
   display: flex;
   justify-content: space-between;
   font-family: "Suisse Regualr", sans-serif;
-  font-size: $font-size;
+  font-size: 13px;
   font-weight: $font-weight;
   color: #ccc;
 }
