--- a/src/Pages/Main/Components/Appointment/Appointment.scss
+++ b/src/Pages/Main/Components/Appointment/Appointment.scss
@@ -1,24 +1,34 @@
-.Store {
+@import "./src/Common.scss";
+
+.AppointmentIsHidden {
+  opacity: 0;
+}
+
+.Appointment {
   width: 100%;
   height: 700px;
+  margin-bottom: 80px;
   display: flex;
-  font-family: "Suisse Regular", sans-serif;
+  opacity: 1;
+  transition: opacity 800ms 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
 
-  .storeContent {
+  .appointmentContent {
     width: 40%;
+    height: 100%;
     padding: 0 40px;
-    margin-left: 100px;
+    margin-left: 60px;
     margin-right: 100px;
+    font-family: "Suisse Regular", sans-serif;
     font-size: 17px;
     font-weight: 100;
     line-height: 1.7;
-    color: #333;
+    color: $fontDark;
 
-    .storeTitle1 {
+    .apTitle {
       font-size: 14px;
     }
 
-    .storeTitle2 {
+    .apTitle2 {
       margin-top: 30px;
       margin-bottom: 40px;
       font-family: "Zapf";
@@ -34,17 +44,17 @@
       padding: 0 23px;
       border: 1px solid rgba(51, 51, 51, 0.2);
       font-size: 14px;
-      color: #333;
+      color: $fontDark;
       transition: color 200ms cubic-bezier(0.645, 0.045, 0.355, 1),
         background-color 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
       cursor: pointer;
 
       &:hover {
         background-color: #333;
-        color: #fffef2;
+        color: $lightColor;
 
         svg {
-          fill: #fffef2;
+          fill: $lightColor;
         }
       }
 
@@ -60,22 +70,12 @@
     }
   }
 
-  .storeImg {
+  .appointmentImg {
     width: 60%;
-    height: 680px;
-    border: 1px solid #dad9d0;
-    border-width: 0 0 1px 0;
 
-    .storeLotteImg {
+    .relaxImg {
       width: 100%;
-      height: 600px;
-    }
-
-    p {
-      padding: 20px 0 0 25px;
-      padding-bottom: -10px;
-      font-size: 14px;
-      color: #93938f;
+      height: 700px;
     }
   }
 }
