--- a/src/Pages/Main/Components/CitrusFeed/CitrusFeed.scss
+++ b/src/Pages/Main/Components/CitrusFeed/CitrusFeed.scss
@@ -1,4 +1,4 @@
-$font-color: #333;
+@import "./src/Common.scss";
 
 .productContainer {
   height: 800px;
@@ -11,7 +11,7 @@ $font-color: #333;
 
     svg {
       width: 100px;
-      top: 195px;
+      top: 250px;
       position: absolute;
       left: 40px;
     }
@@ -22,7 +22,7 @@ $font-color: #333;
     margin-left: 288px;
     padding-top: 180px;
     font-family: "Suiss Regular", sans-serif;
-    color: $font-color;
+    color: $fontDark;
 
     .contentTitle {
       margin-bottom: 20px;
@@ -48,17 +48,17 @@ $font-color: #333;
       padding: 0 23px;
       border: 1px solid rgba(51, 51, 51, 0.2);
       font-size: 14px;
-      color: $font-color;
+      color: $fontDark;
       transition: color 200ms cubic-bezier(0.645, 0.045, 0.355, 1),
         background-color 200ms cubic-bezier(0.645, 0.045, 0.355, 1);
       cursor: pointer;
 
       &:hover {
-        background-color: $font-color;
-        color: #fffef2;
+        background-color: $fontDark;
+        color: $lightColor;
 
         svg {
-          fill: #fffef2;
+          fill: $lightColor;
         }
       }
 
