--- a/src/Pages/Main/Components/Quote/Quote.scss
+++ b/src/Pages/Main/Components/Quote/Quote.scss
@@ -1,12 +1,20 @@
+@import "./src/Common.scss";
+
+.QuoteIsHidden {
+  opacity: 0;
+}
+
 .Quote {
   width: 100%;
   border: 1px solid #dad9d0;
   border-width: 0 0 1px 0;
+  opacity: 1;
+  transition: opacity 800ms 100ms cubic-bezier(0.645, 0.045, 0.355, 1);
 
   .quoteContent {
     margin: 150px 0;
     text-align: center;
-    color: #333;
+    color: $fontDark;
 
     .quoteParagraph {
       font-family: "Zapf", serif;
