--- a/src/Components/Productfilternav.scss
+++ b/src/Components/Productfilternav.scss
@@ -25,7 +25,7 @@
       display: flex;
       align-items: center;
       font-weight: normal;
-      color: $darkColor;
+      color: $fontDark;
       font-size: x-large;
       margin: 0;
       height: 80px;
@@ -51,7 +51,7 @@
         li {
           padding: 0 10px;
           font-size: 14px;
-          color: #666666;
+          color: $fontLight;
 
           &:first-child {
             padding-left: 0;
@@ -87,7 +87,7 @@
         cursor: pointer;
 
         &:hover {
-          background-color: $darkColor;
+          background-color: $fontDark;
           color: white;
           fill: white;
         }
