--- a/src/Pages/Product/Components/Recommendproduct.scss
+++ b/src/Pages/Product/Components/Recommendproduct.scss
@@ -1,24 +1,22 @@
 @import "./src/Common.scss";
 
-.Product {
+.Recommendproduct {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-end;
-  width: 400px;
-  height: 530px;
-  &:hover {
-    background-color: $lightGray;
-  }
+  width: 500px;
+  height: 630px;
 
   .imgContainer {
     display: flex;
+    justify-content: center;
     align-items: flex-end;
-    width: 300px;
-    height: 430px;
+    width: 420px;
+    height: 500px;
 
     img {
       width: 100%;
+      height: 100%;
     }
   }
 
@@ -30,6 +28,7 @@
       color: $fontDark;
       text-align: center;
       margin: 0 0 10px;
+      font-size: 15px;
     }
     .sizePrice {
       padding: 0 40px;
