Refactor: 리뷰 반영 수정 Add : Sidebar 기능 구현중

--- a/src/Pages/Main/Components/Carousel/Carousel.scss
+++ b/src/Pages/Main/Components/Carousel/Carousel.scss
@@ -1,9 +1,9 @@
 @import "./src/Common.scss";
 
-.ItemSlideIsHidden {
+.HiddenCarousel {
   opacity: 0;
 }
-.ItemSlide {
+.Carousel {
   width: 100%;
   height: 840px;
   padding-top: 50px;
@@ -75,6 +75,10 @@
         img {
           margin-top: 50px;
           height: 400px;
+        }
+
+        .briefDesc {
+          color: $fontLight;
         }
       }
     }
