--- a/src/Pages/Main/Components/CitrusFeed/CitrusFeed.scss
+++ b/src/Pages/Main/Components/CitrusFeed/CitrusFeed.scss
@@ -1,6 +1,6 @@
 @import "./src/Common.scss";
 
-.productContainer {
+.CitrusFeed {
   height: 800px;
   background-image: url("https://www.aesop.com//medias/1Aesop-Citrus-Melange-Body-Cleanser-2020-Hybris-Homepage-Primary-Full-Bleed-Desktop-4000x1450px.jpg?context=bWFzdGVyfGltYWdlc3w1NTg0NDJ8aW1hZ2UvanBlZ3xpbWFnZXMvaGE4L2gyNC85NDQzODk4ODg0MTI2LmpwZ3xjYzE4NDVhNmZkMDM0M2QxZDJiNGE4ZDkwNzI4ZGM1MmQxNjg0NzYxM2JjOGQ2OTFkNDhiZjI0MjViOGJlYTlm");
   background-size: cover;
