--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -18,8 +18,9 @@ $font-weight: 100;
       width: 40%;
 
       .subscribe {
+        display: block;
         padding-top: 10px;
-        margin-bottom: 60px;
+        margin-bottom: 25px;
       }
       .inputBox {
         position: relative;
@@ -75,7 +76,7 @@ $font-weight: 100;
         width: calc(100% / 3);
         line-height: 2.3;
 
-        .listTitle {
+        :nth-child(1) {
           margin-bottom: 20px;
         }
       }
@@ -92,7 +93,7 @@ $font-weight: 100;
 .aesopKorea {
   width: 100%;
   height: 78px;
-  padding: 20px 40px;
+  padding: 36px 40px;
   background-color: $fontDark;
   display: flex;
   justify-content: space-between;
