--- a/src/Components/Nav/Nav.scss
+++ b/src/Components/Nav/Nav.scss
@@ -1,18 +1,5 @@
 @import "./src/Common.scss";
 
-.NavFixed {
-  width: 100%;
-  height: 69px;
-  padding-top: 26px;
-  position: fixed;
-  border: 1px solid #dad9d0;
-  border-width: 0 0 1px 0;
-  background-color: $lightColor;
-  font-family: "Suisse Regular", sans-serif;
-  color: $fontDark;
-  z-index: 10;
-}
-
 .Nav {
   width: 100%;
   height: 69px;
@@ -20,6 +7,14 @@
   background-color: transparent;
   font-family: "Suisse Regular", sans-serif;
   color: $fontDark;
+}
+
+.Fixed {
+  position: fixed;
+  border: 1px solid #dad9d0;
+  border-width: 0 0 1px 0;
+  background-color: $lightColor;
+  z-index: 10;
 }
 
 .navList {
@@ -83,5 +78,114 @@
     &::after {
       content: attr(data-count);
     }
+  }
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 1;
+  background-color: $lightColor;
+  overflow-x: hidden;
+  transition: 0.5s;
+  font-family: "Suisse Regular", sans-serif;
+  color: $fontDark;
+  border-right: 1px solid $grayColor;
+
+  .topList {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 26px;
+    padding-left: 25px;
+
+    .topCategory {
+      display: flex;
+
+      li {
+        margin-right: 25px;
+        font-size: 14px;
+        cursor: pointer;
+
+        .topListLink {
+          border-bottom: solid 1px transparent;
+          color: $fontDark;
+          text-decoration: none;
+          cursor: pointer;
+
+          &:hover::after {
+            transform: scaleX(1);
+          }
+
+          &::after {
+            margin-top: 2px;
+            display: block;
+            content: "";
+            border-bottom: solid 1px $fontDark;
+            transform: scaleX(0);
+            transform-origin: left;
+            transition: transform 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+          }
+        }
+      }
+    }
+    .btnContainer {
+      padding-right: 24px;
+      cursor: pointer;
+
+      .closeBtn {
+        width: 14px;
+
+        &:hover,
+        &:focus {
+          color: #f1f1f1;
+        }
+      }
+    }
+  }
+  .sideCategory {
+    padding-left: 40px;
+
+    svg {
+      width: 100px;
+      margin-top: 140px;
+    }
+
+    .panelList {
+      padding-top: 27px;
+      font-size: 22px;
+      line-height: 1.7;
+      font-weight: 100;
+
+      .panelLink {
+        border-bottom: solid 1px transparent;
+        color: $fontDark;
+        text-decoration: none;
+        cursor: pointer;
+
+        &:hover::after {
+          transform: scaleX(1);
+        }
+
+        &::after {
+          width: 150px;
+          margin-top: 2px;
+          display: block;
+          content: "";
+          border-bottom: solid 1px $fontDark;
+          transform: scaleX(0);
+          transform-origin: left;
+          transition: transform 300ms;
+        }
+      }
+    }
+  }
+  .orderHistory {
+    color: $fontLight;
+    font-size: 14px;
+    margin-top: 230px;
+    cursor: pointer;
   }
 }
