[배정규] Add: 상품 리스트 페이지 Url Parameter 기능 구현 완료

--- a/src/Common.scss
+++ b/src/Common.scss
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: "Suisse Medium";
+  font-family: "Suisse Medium", serif;
   src: url("/public/Fonts/SuisseIntl-Medium-WebS.woff2") format("woff2");
 }
 
