Modify : api 수정 Refactor : merge 후 겹치는 코드 수정

--- a/src/Pages/Product/Components/OverlayIngredient.scss
+++ b/src/Pages/Product/Components/OverlayIngredient.scss
@@ -8,14 +8,13 @@
   width: calc(100% * 1 / 2);
   top: 0;
   left: 0;
-  animation: 1000ms 1ms slide-right--100 cubic-bezier(0.32, 0.24, 0.15, 1)
-    forwards;
+  animation: 1000ms 1ms skinOverlay cubic-bezier(0.32, 0.24, 0.15, 1) forwards;
   transform: translate(-100%, 0);
   background-color: $lightColor;
   height: 100%;
   position: fixed;
 
-  @keyframes slide-right--100 {
+  @keyframes skinOverlay {
     0% {
       transform: translate(-200%, 0);
     }
