Modify: 회원가입 철자 오류 수정완료, 메인페이지 이동 불가 수정중
* [송수호]fix: 컨플릭트 에러 수정중

* [송수호]map activetab학습을 위한 커밋

* [송수호]add:map컴포넌트 상세리스트완성

* [송수호]Modify:버튼색상 수정

* [송수호] fiternav렌더오류 해결을 위한  pull로 인한  커밋

* [송수호] modify:숨겨진 추가됨, 버튼 글씨가 색상이 보이는 것 수정완료

* [송수호]modify:상세페이지 1개의 카테고리 접근경로 수정완료

* [송수호] modify:철자 오류 수정

* [송수호] modify: 철자 오류 및 회원가입 수정완료

--- a/src/Pages/Productmap/Component/Underbar.scss
+++ b/src/Pages/Productmap/Component/Underbar.scss
@@ -8,6 +8,8 @@ $font-family: "Suisse Regular", sans-serif;
   height: 370px;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 5;
 
   .nextpageWrapper {
     padding: 40px;
@@ -45,10 +47,11 @@ $font-family: "Suisse Regular", sans-serif;
       height: 160px;
 
       .nextpageInfoTitle {
-        color: #333333;
+        color: $fontDark;
         margin-bottom: 20px;
         font-size: 14px;
         margin-bottom: 20px;
+        font-weight: 400;
         font-family: "Suisse Medium", sans-serif;
         line-height: inherit;
       }
@@ -58,10 +61,45 @@ $font-family: "Suisse Regular", sans-serif;
         font-size: 30px;
         margin-bottom: 20px;
         line-height: 1.33;
+        font-weight: 400;
         font-family: "Zapf Humanist", serif;
       }
 
       .nextpageBtnWrapper {
+        .nextpageBtn:hover {
+          background-color: $fontDark;
+          border: 1px solid rgba(51, 51, 51, 0.2);
+          height: 60px;
+          min-width: 210px;
+          padding: 21px 23px;
+          position: relative;
+          background-color: $fontDark;
+
+          .btnContent {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: space-between;
+            margin: auto;
+            overflow: hidden;
+
+            .btnLabel {
+              font-family: "Suisse Medium", sans-serif;
+              color: #fffef2;
+              font-size: 14px;
+              line-height: 1.1;
+              flex-shrink: 0;
+            }
+
+            .btnIconBector {
+              fill: #fffef2;
+              height: 10px;
+              margin-left: 23px;
+              width: 15px;
+            }
+          }
+        }
+
         .nextpageBtn {
           border: 1px solid rgba(51, 51, 51, 0.2);
           height: 60px;
@@ -79,9 +117,9 @@ $font-family: "Suisse Regular", sans-serif;
             overflow: hidden;
 
             .btnLabel {
-              font-family: $font-family;
+              font-family: "Suisse Medium", sans-serif;
               color: $fontDark;
-              font-size: 1.4rem;
+              font-size: 14px;
               line-height: 1.1;
               flex-shrink: 0;
             }
